--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<p1>Klicke auf den Link! Jetzt!</p>	
 	<img src="https://ih1.redbubble.net/image.5166749047.4146/raf,360x360,075,t,fafafa:ca443f4786.jpg">
 </img>
-
+<link rel="stylesheet" href="style.css">
 <a href="https://www.youtube.com/watch?v=xvFZjo5PgG0">klick hier, bro!</a>
  <p style="font-size:100px">&#128520;</p>
 <p> font-family:
